# suspenders-elasticsearch

./: LICENSE.md  README.md  pyproject.toml
suspenders/: aggregations.py  exceptions.py  filters.py  pyes_filters.py  queries.py  query_set.py  result_set.py  serializer.py  suspenders.py  utils.py
suspenders/app/: apps.py  model_indexed.py  models.py  sites.py  utils.py
suspenders/app/management/: lib.py
suspenders/app/management/commands/: create_mapping.py  delete_indexes.py  populate_indexes.py  put_settings.py  rebuild_indexes.py
suspenders/mappings/: __init__.py  base_manager.py  base_map.py  bulk_manager.py  fields.py  models.py  result.py
suspenders/tests/: basic.py
